--- a/data/read_data.ipynb
+++ b/data/read_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,22 +12,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['daily.csv',\n",
-       " 'hourly.csv',\n",
-       " 'read_data.ipynb',\n",
-       " 'stations.csv',\n",
-       " 'stations.json',\n",
-       " 'station_data',\n",
-       " 'weekdays.csv']"
+       "['daily.csv', 'hourly.csv', 'read_data.ipynb', 'stations.csv', 'weekdays.csv']"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -38,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,16 +44,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "stations.to_json('stations.json', orient='records', force_ascii=False)"
+    "# stations.to_json('stations.json', orient='records', force_ascii=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,24 +64,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "daily.kpas = daily.kpas.round().astype(int)\n",
-    "daily = pd.pivot_table(daily, index=['station', 'date', 'name'], columns='type', values='kpas').reset_index()"
+    "daily = pd.pivot_table(daily, index=['station', 'date', 'name'], columns='type', values='kpas').reset_index()\n",
+    "daily.date = pd.to_datetime(daily.date)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "year = pd.DataFrame(pd.DatetimeIndex(freq=pd.DateOffset(days=1), start='2014-01-01', end='2014-12-31'), columns=['date'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_st(st, name, lon, lat, kpas):\n",
     "    st_daily = daily.loc[daily.station == st, ['date','arrival','departure']\n",
-    "                   ].fillna(0\n",
-    "                   ).to_dict(orient='records')\n",
+    "                   ].merge(year, how='right'\n",
+    "                   ).fillna(0\n",
+    "                   ).sort_values('date')\n",
+    "    st_daily.date = st_daily.date.astype(str)\n",
+    "    st_daily = st_daily.to_dict(orient='records')\n",
+    "    \n",
     "    st_weekdays = weekdays.loc[weekdays.station == st, ['weekday', 'arrival', 'departure']\n",
     "                         ].round(2\n",
     "                         ).fillna(0\n",
@@ -113,41 +121,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'name': 'Тарасівка',\n",
-       " 'id': 2201135,\n",
-       " 'lon': 30.318772999999997,\n",
-       " 'lat': 50.344643,\n",
-       " 'kpas': 1,\n",
-       " 'daily': [{'date': '2014-01-10', 'arrival': 0.0, 'departure': 1.0},\n",
-       "  {'date': '2014-01-16', 'arrival': 0.0, 'departure': 1.0},\n",
-       "  {'date': '2014-02-14', 'arrival': 0.0, 'departure': 1.0}],\n",
-       " 'weekdays': [{'weekday': 4.0, 'arrival': 0.0, 'departure': 1.0},\n",
-       "  {'weekday': 5.0, 'arrival': 0.0, 'departure': 1.0}],\n",
-       " 'hourly': [{'hour': 6.0, 'arrival': 0.0, 'departure': 1.0}]}"
-      ]
-     },
-     "execution_count": 97,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "all_st[2201135]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('all_stations.json', 'w', encoding='utf-8') as f:\n",
+    "with open('../src/assets/data/all_stations.json', 'w', encoding='utf-8') as f:\n",
     "    json.dump(all_st, f, ensure_ascii=False)"
    ]
   },
